Edit news post title, excerpt and minor content

--- a/news/articles/_posts/2016-06-16-20160616T213912.md
+++ b/news/articles/_posts/2016-06-16-20160616T213912.md
@@ -1,7 +1,7 @@
 ---
-title: Deadline of Filing of the Statement of Contributions and Expenditures (SOCE)
+title: Deadline of Filing of SOCE
 date: 2016-06-16T21:39:12UTC
-excerpt: What went wrong with the SOCE deadline?
+excerpt: What went wrong with the deadline of filing of the Statement of Contributions and Expenditures?
 layout: post
 categories: [news_article]
 tags: [comelec, election, soce, liberal party]
