--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -1,7 +1,7 @@
 ---
-title: President Rodrigo Duterte Inaugural Address
+title: 16th President Inaugural Address Transcript
 date: 2016-06-30T05:39:03UTC
-excerpt: Today marks the event worthy of Philippine history. The inauguration of the first Mindanaoan President of the country, Rodrigo Roa Duterte.
+excerpt: Transcript of the Inaugural Address of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte.
 layout: post
 categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
@@ -12,7 +12,7 @@ image:
   attribution: RTVM
 ---
 
-Here's the Inaugural Address of President Rodrigo Roa Duterte with additional formating and emphasis.
+Here's the Inaugural Address of President Rodrigo Roa Duterte from [PCOO site](http://pcoo.gov.ph/june-30-2016-president-rodrigo-roa-dutertes-inaugural-address/) reproduced here with additional formating and emphasis.
 
 President Fidel Ramos, sir, _salamat po sa tulong mo_ (thank you for your help) making me president; President Joseph Ejercito Estrada; Senate President Franklin Drilon and the members of the Senate; Speaker Feliciano Belmonte and the members of the House of Representatives; Chief Justice Maria Lourdes Sereno and Associate Justices of the Supreme Court; His Excellency Giuseppe Pinto and the members of the Diplomatic Corps; incoming members of the Cabinet; fellow workers in government; my fellow countrymen.
 
@@ -114,5 +114,3 @@ Why?
 Because I am ready to start my work for the nation.
 
 Thank you and good afternoon.
-
-&#x25cf; [Source](http://pcoo.gov.ph/june-30-2016-president-rodrigo-roa-dutertes-inaugural-address/)
