--- a/news/top/_posts/2016-06-30-20160630T002859.md
+++ b/news/top/_posts/2016-06-30-20160630T002859.md
@@ -1,7 +1,7 @@
 ---
 title: Inauguration of the 16th President
 date: 2016-06-30T00:28:59UTC
-excerpt: Inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte. He will be the first President of the country from Mindanao.
+excerpt: Inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, the first President coming from Mindanao.
 layout: post
 categories: [news_top, news_article]
 tags: [inauguration, president, duterte]
@@ -33,6 +33,3 @@ Rodrigo Duterte will be the first Asian President whose inauguration will be bro
 Only People's Television 4 (PTV-4) and Radio Television Malacanang (RTVM) will be covering the inauguration in Rizal Hall at Malacañan Palace.
 "Other journalists who will cover the inauguration would be given a work station outside the Rizal Hall, probably at the New Executive Building," said incoming PCOO Secretary Martin Andanar.
 Nine national broadcasting companies will also cover the event but will only be allowed inside the palace grounds of gate 4.
-The full inauguration can be watched via the government television station PTV 4 and will be broadcast at the same time via live streaming at [http://www.ptv.ph/ptvlivestream](http://www.ptv.ph/ptvlivestream).
-The official coverage will be done by the Radio TV Malacanang (RTVM) and will also broadcast it via live streaming at [http://rtvm.gov.ph/main/?p=40206](http://rtvm.gov.ph/main/?p=40206) beginning 8am today.
-&nbsp;&#x25cf;
