Set news post permalinks

--- a/news/articles/_posts/2016-06-12-20160612T152603.md
+++ b/news/articles/_posts/2016-06-12-20160612T152603.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [independence day, vin d honneur]
 published: true
+permalink: /:path
 ---
 
 The British New Year's Day Levee was adopted by the Americans and later by the Philippines.
