--- a/news/articles/_posts/2016-06-16-20160616T213912.md
+++ b/news/articles/_posts/2016-06-16-20160616T213912.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [comelec, election, soce, liberal party]
 published: true
+permalink: /:path
 ---
 
 [Republic Act 7166], approved on November 26, 1991 under former President Corazon C. Aquino, is an act providing for synchronized national and local elections and for electoral reforms, authorizing appropriations therefor, and for other purposes.
