--- a/news/articles/_posts/2016-06-24-20160624T081212.md
+++ b/news/articles/_posts/2016-06-24-20160624T081212.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [commerce, industry, pcci]
 published: true
+permalink: /:path
 ---
 
 The business community has come up with recommendations to the incoming President Rodrigo R. Duterte and his cabinet in conclusion of the business consultation forum held on June 20-21, 2016 in Davao.
