--- a/news/articles/_posts/2016-06-28-20160628T172635.md
+++ b/news/articles/_posts/2016-06-28-20160628T172635.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: 
 published: true
+permalink: /:path
 ---
 
 The 25th Mindanao Business Conference (MinBizCon) will be held on 24-26 August 2016 at the Philippine Gateway Hotel in Surigao City.
