--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
+permalink: /:path
 image:
   layout:
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
