--- a/news/top/_posts/2016-06-12-20160612T123257.md
+++ b/news/top/_posts/2016-06-12-20160612T123257.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_top, news_article]
 tags: [duterte times, online, launch]
 published: true
+permalink: /:path
 ---
 
 Duterte Times is an alternative online news about the Philippines.
