--- a/news/top/_posts/2016-06-12-20160612T140710.md
+++ b/news/top/_posts/2016-06-12-20160612T140710.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_top, news_article]
 tags: [independence day, vin d honneur, aquino, pnoy]
 published: true
+permalink: /:path
 video:
   layout: top
   source: ekiXQM5D-s4
