--- a/news/top/_posts/2016-06-30-20160630T002859.md
+++ b/news/top/_posts/2016-06-30-20160630T002859.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_top, news_article]
 tags: [inauguration, president, duterte]
 published: true
+permalink: /:path
 image:
   layout:
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
