--- a/news/top/_posts/2016-07-01-20160701T023310.md
+++ b/news/top/_posts/2016-07-01-20160701T023310.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_top, news_article]
 tags: [pnp, chief of police, assumption of command]
 published: true
+permalink: /:path
 image:
   layout: auto_width
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
