--- a/news/articles/_posts/2016-06-20-20160620T161719.md
+++ b/news/articles/_posts/2016-06-20-20160620T161719.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [comelec, election, soce, christian robert lim]
 published: true
+permalink: /:path
 ---
 
 Commissioner Christian Robert Lim has filed his irrevocable resignation as Comelec Campaign Finance Officer (CFO) after the Comelec en banc extended the deadline of the filing of the Statement of Contributions and Expenditures (SOCE) up to June 30, 2016.
