--- a/news/articles/_posts/2016-06-20-20160620T213320.md
+++ b/news/articles/_posts/2016-06-20-20160620T213320.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_article]
 tags: [economy, social, socioeconomic]
 published: true
+permalink: /:path
 ---
 
 A two-day economic forum, "Sulong Pilipinas: Hakbang Tungo sa Kaunlaran", starting 20 June 2016 was held in Davao to discuss the incoming Duterte administration socioeconomic agenda.
