--- a/news/sections/_posts/2016-07-02-20160702T095631.md
+++ b/news/sections/_posts/2016-07-02-20160702T095631.md
@@ -7,6 +7,7 @@ style: horizontal
 categories: [news_section]
 tags: [pnp, statement, reorganization]
 published: true
+permalink: /:path
 image: 
 image_attribution: 
 ---
