--- a/news/top/_posts/2016-07-01-20160701T042747.md
+++ b/news/top/_posts/2016-07-01-20160701T042747.md
@@ -6,6 +6,7 @@ layout: post
 categories: [news_top, news_article]
 tags: [afp, chief of staff, change of command]
 published: true
+permalink: /:path
 image:
   layout: auto_width
   source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
@@ -30,10 +31,3 @@ The ceremony was attended, among others, by former President Fidel V. Ramos and 
 The President, in his speech, emphasized his role to unify the country, iterating his continued intention of talking with the Communist Party of the Philippines (CPP) leader Jose Maria Sison, Nur Misuari of the Moro National Liberation Front (MNLF) and chair of the Moro Islamic Liberation Front (MILF), Al Haj Murad Ebrahim. He said, "It is not a war to be fought forever. We cannot fight forever. We might have the weapons, the armaments and the bullets and the mortars. But that does not make a nation. My job is to bring peace. But hand in hand I must also bring order in my country."
 
 With regards to the Abu Sayyaf Group, he said, "I am not warning the Abu Sayyaf. But I said, there will be a time for reckoning. ... We cannot be the whipping boy of a few who wants nothing but, maybe, money and power on their hands."
-
-
-
-
-
-
-   
