Edit image yaml front matter

--- a/news/sections/_posts/2016-07-02-20160702T050516.md
+++ b/news/sections/_posts/2016-07-02-20160702T050516.md
@@ -8,8 +8,10 @@ categories: [news_section]
 tags: [pnp, statement]
 published: true
 permalink: /:path
-image: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
-image_attribution: RTVM
+image:
+  layout: auto_width
+  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+  attribution: RTVM
 ---
 
 July 1, 2016
