--- a/news/sections/_posts/2016-07-02-20160702T095631.md
+++ b/news/sections/_posts/2016-07-02-20160702T095631.md
@@ -9,7 +9,9 @@ tags: [pnp, statement, reorganization]
 published: true
 permalink: /:path
 image: 
-image_attribution: 
+  layout:
+  source:
+  attribution: 
 ---
 
 The new PNP Chief PDG Ronald M Dela Rosa approved the reorganization of senior police officers in key positions of the Philippine National Police (PNP) which was recommended by the Senior Officers Placement and Promotion Board (SOPPB) for immediate implementation by the Directorate for Personnel and Records Management (DPRM). The key positions mentioned refer to the PNP includes the PNP Command Group, Directorial Staff, Police Regional Offices and National Support Units.
