Move news article to top news

--- a/news/top/_posts/2016-07-05-20160705T222147.md
+++ b/news/top/_posts/2016-07-05-20160705T222147.md
@@ -3,7 +3,7 @@ title: 5 Police Generals Allegedly Involved in Illegal Drugs
 date: 2016-07-05T22:21:47PHT
 excerpt: President Duterte named 5 PNP Generals allegedly involved in illegal drugs during the 69th Anniversary of the Philippine Air Force celebration in Clark, Pampanga.
 layout: post
-categories: [news_article]
+categories: [news_top, news_article]
 tags: 
 published: true
 permalink: /:path
