--- a/news/articles/_posts/2016-06-20-20160620T213320.md
+++ b/news/articles/_posts/2016-06-20-20160620T213320.md
@@ -3,7 +3,7 @@ title: Duterte Administration 10-point Socioeconomic Agenda
 date: 2016-06-20T21:33:20UTC
 excerpt: Economic forum in Davao tackles Duterte administration 10-point Socioeconomic Agenda.
 layout: post
-categories: [news_article]
+categories: [news_business]
 tags: [economy, social, socioeconomic]
 published: true
 permalink: /:path
