Consolidate news posts

--- a/news/articles/_posts/2016-06-12-20160612T123257.md
+++ b/news/articles/_posts/2016-06-12-20160612T123257.md
@@ -3,7 +3,7 @@ title: Duterte Times is now Online
 date: 2016-06-12T12:32:57UTC
 excerpt: Duterte Times is now online to deliver Philippine news and information for the Filipino people.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: [duterte times, online, launch]
 published: true
 permalink: /:path
@@ -28,3 +28,4 @@ The information on this site is intended to be shared, except those that are cop
 > Except where otherwise noted, the content on this site (Duterte Times) is licensed under a [Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA)]({{ site.data.links.cc_by_sa_license }}). You are free to copy reproduce, distribute, display, and make adaptations but you must provide [proper attribution]({{ site.data.link.attribution }}).
 
 Stay tuned and good reading.
+&#x25cf;
