--- a/news/articles/_posts/2016-06-12-20160612T140710.md
+++ b/news/articles/_posts/2016-06-12-20160612T140710.md
@@ -3,7 +3,7 @@ title: 118th Philippine Independence Day Vin D’Honneur
 date: 2016-06-12T14:07:10UTC
 excerpt: Message of President Benigno Aquino III during the 118th Philppine Independence Day Vin D’Honneur.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: [independence day, vin d honneur, aquino, pnoy]
 published: true
 permalink: /:path
@@ -24,7 +24,5 @@ He addressed the Filipino people, saying,
 
 Here is a link to the full transcript of the [speech in English](http://www.gov.ph/2016/06/12/aquino-toast-kalayaan-english/).
 
-&#x25cf;&nbsp;[PIA News](http://news.pia.gov.ph/article/view/1141465540753)
-
-
-
+&#x25cf;
+[PIA News](http://news.pia.gov.ph/article/view/1141465540753)
