--- a/news/articles/_posts/2016-06-12-20160612T152603.md
+++ b/news/articles/_posts/2016-06-12-20160612T152603.md
@@ -3,7 +3,7 @@ title: "Vin d’Honneur"
 date: 2016-06-12T015:26:03UTC
 excerpt: What does it mean?
 layout: post
-categories: [news_article]
+categories: [article]
 tags: [independence day, vin d honneur]
 published: true
 permalink: /:path
@@ -29,4 +29,4 @@ A nuncio is appointed by the Holy See, which is usually an archbishop, and is th
 The diplomatic corps is the collective body of foreign diplomats which may refer to ambassadors, high commissioners, and others, who represent their countries in another state or country.
 The term is sometimes confused with the collective body of diplomats from a particular country—the proper term for which is diplomatic service.
 In some countries, the longest-serving ambassador to a country is given the title Dean of the Diplomatic Corps and is sometimes accorded a high position in the order of precedence.
-[[Source](https://en.wikipedia.org/wiki/Diplomatic_corps)]&nbsp;&#x25cf;
+&#x25cf; [[Source](https://en.wikipedia.org/wiki/Diplomatic_corps)]
