--- a/news/articles/_posts/2016-06-16-20160616T213912.md
+++ b/news/articles/_posts/2016-06-16-20160616T213912.md
@@ -3,7 +3,7 @@ title: Deadline of Filing of SOCE
 date: 2016-06-16T21:39:12UTC
 excerpt: What went wrong with the deadline of filing of the Statement of Contributions and Expenditures?
 layout: post
-categories: [news_article]
+categories: [article]
 tags: [comelec, election, soce, liberal party]
 published: true
 permalink: /:path
@@ -172,11 +172,15 @@ Liberal Party spokesperson Barry Gutierrez, according to GMA News, said: "_Comel
 Comelec Chairman Juan Andres Bautista: "_allow the late filing but with imposition of appropriate fines and penalties_."
 
 Comelec spokesman Dan Jimenez on deadline extension: "_The decision was backed by laws and precedent_."
+&#x25cf;
 
 [Republic Act 7166]: http://www.comelec.gov.ph/?r=References/RelatedLaws/ElectionLaws/SynchronizedNationalandLocal/RA7166
 [Resolution 9991]: http://www.comelec.gov.ph/?r=2016NLE/Resolutions/res9991
 [Rule 10, Section 2]: http://www.comelec.gov.ph/?r=2016NLE/Resolutions/res9991/rule10
 
+
+
+{% comment %}
 [](http://www.mb.com.ph/comelec-grants-request-of-lp-and-roxas-to-extend-the-filing-of-soces-until-june-30/)
 [](http://newsinfo.inquirer.net/791038/comelec-explains-accepting-late-lp-soce-lets-not-defeat-peoples-will)
 [](http://www.thinkingpinoy.net/2016/06/lenis-possible-defense-strike-down-soce.html)
@@ -184,3 +188,4 @@ Comelec spokesman Dan Jimenez on deadline extension: "_The decision was backed b
 [](http://www.thinkingpinoy.net/2016/06/june-30-soce-extension-leni-robredo.html)
 [](http://interaksyon.com/article/128390/comelec-reminds-all-candidates-to-submit-their-statement-of-contributions-and-expenditures)
 [](http://www.manilatimes.net/comelec-allows-late-soce-filing/268247/)
+{% endcomment %}
