--- a/news/articles/_posts/2016-06-24-20160624T081212.md
+++ b/news/articles/_posts/2016-06-24-20160624T081212.md
@@ -3,7 +3,7 @@ title: Business Community Top Recommendations to Incoming Administration
 date: 2016-06-24T08:12:12UTC
 excerpt: In conclusion of the two-day business forum held in Davao on 20-21 June 2016, the business community came up with recommendations for the incoming President-elect Rodrigo R. Duterte and his cabinet.
 layout: post
-categories: [news_business]
+categories: [business]
 tags: [commerce, industry, pcci]
 published: true
 permalink: /:path
@@ -30,5 +30,4 @@ The following top ten actionable recommendations of the business community was p
 10. Streamline implementations of Private-Public Partnership (PPP) and infrastructure projects.
 
 Mindanao Business Council Chairman Vicente Lao said, "We look forward to you as our CEO with your whole cabinet as your COOs to assist you. You can give the signal and the whole country will follow."
-
-[[Source](http://www.philippinechamber.com/index.php?option=com_content&view=article&id=869:pcci-president-george-t-barcelon-presents-top-10-actionable-recommendations-to-president-elect-duterte&catid=53&Itemid=246)]&nbsp;&#x25cf;
+&#x25cf; [[Source](http://www.philippinechamber.com/index.php?option=com_content&view=article&id=869:pcci-president-george-t-barcelon-presents-top-10-actionable-recommendations-to-president-elect-duterte&catid=53&Itemid=246)]
