--- a/news/articles/_posts/2016-06-28-20160628T172635.md
+++ b/news/articles/_posts/2016-06-28-20160628T172635.md
@@ -3,7 +3,7 @@ title: 25th Mindanao Business Conference (MinBizCon)
 date: 2016-06-28T17:26:35UTC
 excerpt: Silver anniversary of MinBizCon will be celebrated by Mindanaoans in the mining capital of the Philippines, Surigao del Norte in Caraga region.
 layout: post
-categories: [news_business]
+categories: [business]
 tags: 
 published: true
 permalink: /:path
@@ -19,7 +19,7 @@ Invited guest speakers for the event are National Economic and Development Autho
 The event is expected to be attended by 800 - 1,000 delegates comprising Cabinet Secretaries of the new administration, Chambers of Commerce and Industry in Mindanao, investors, business leaders, policy-makers, industry players, mining companies, contractors, micro/small/medium enterprises, heavy equipment companies and other allied services, business professionals and students.
 
 The conference objectives are to tackle business issues and policies that undermine development, identify solutions, and pass resolutions aimed to position Mindanao as the next growth area in the ASEAN. "This Mindanao Policy and Program Agenda will then be endorsed to His Excellency Rodrigo Duterte as input to the six-year Mindanao Development Plan,” Paqueo iterated.
-&#x25cf;&nbsp;[[Source](http://news.pia.gov.ph/article/view/2041466644047/25th-minbizcon-to-expand-business-opportunities#sthash.vA5Au64C.dpuf)].
+&#x25cf; [[Source](http://news.pia.gov.ph/article/view/2041466644047/25th-minbizcon-to-expand-business-opportunities#sthash.vA5Au64C.dpuf)]
 
 
 
