--- a/news/articles/_posts/2016-06-30-20160630T002859.md
+++ b/news/articles/_posts/2016-06-30-20160630T002859.md
@@ -3,7 +3,7 @@ title: Inauguration of the 16th President
 date: 2016-06-30T00:28:59UTC
 excerpt: Inauguration of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte, the first President coming from Mindanao.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: [inauguration, president, duterte]
 published: true
 permalink: /:path
@@ -34,3 +34,4 @@ Rodrigo Duterte will be the first Asian President whose inauguration will be bro
 Only People's Television 4 (PTV-4) and Radio Television Malacanang (RTVM) will be covering the inauguration in Rizal Hall at Malacañan Palace.
 "Other journalists who will cover the inauguration would be given a work station outside the Rizal Hall, probably at the New Executive Building," said incoming PCOO Secretary Martin Andanar.
 Nine national broadcasting companies will also cover the event but will only be allowed inside the palace grounds of gate 4.
+&#x25cf;
