--- a/news/articles/_posts/2016-07-01-20160701T023310.md
+++ b/news/articles/_posts/2016-07-01-20160701T023310.md
@@ -3,7 +3,7 @@ title: New Philippine National Police Chief
 date: 2016-07-01T02:33:10UTC
 excerpt: The new President attended the Assumption of Command of Police Chief Superintendent Ronald Dela Rosa as the new Philippine National Police Chief in Camp Crame, Quezon City.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: [pnp, chief of police, assumption of command]
 published: true
 permalink: /:path
@@ -25,5 +25,4 @@ PNP Chief Ronald 'Bato' Dela Rosa is now in command of the 170,000-strong PNP of
 President Duterte, in his speech, said, "I had the fortunate chance of having good military and police officers," referring to the members of Davao City’s armed units during his mayoral term. He said he chooses those whom he has closed worked with in the past and the same goes when he selects key law enforcement officials under his administration. He also iterated his promise of raising the salaries of the PNP and Armed Forces of the Philippines (AFP) personnel and providing the necessary tools required to fight crime and criminality.
 
 "I will not run this country with a corrupt police, mag-aaway tayo niyan… Do your duty, I will die for you," the President said as he closed his speech.
-
-
+&#x25cf;
