--- a/news/articles/_posts/2016-07-02-20160702T050516.md
+++ b/news/articles/_posts/2016-07-02-20160702T050516.md
@@ -3,8 +3,7 @@ title: Press Statement of new PNP Chief
 date: 2016-07-02T05:05:16UTC
 excerpt: First press statement of the new PNP Chief, PDG Ronald Dela Rosa, after his assumption of command on 1 July 2016.
 layout: post
-style: horizontal
-categories: [news_section]
+categories: [other]
 tags: [pnp, statement]
 published: true
 permalink: /:path
@@ -30,4 +29,4 @@ I urge the entire 170,000 strong officers, men and women of the PNP to rally beh
 
 Thank you.
 
-[[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/latest-news/3431-press-statement-of-the-chief-pnp-pdg-ronald-m-dela-rosa)]
+&#x25cf; [[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/latest-news/3431-press-statement-of-the-chief-pnp-pdg-ronald-m-dela-rosa)]
