--- a/news/articles/_posts/2016-07-02-20160702T095631.md
+++ b/news/articles/_posts/2016-07-02-20160702T095631.md
@@ -3,8 +3,7 @@ title: Reorganization of PNP Senior Officers
 date: 2016-07-02T09:56:31UTC
 excerpt: PNP Chief, PDG Ronald M Dela Rosa approved the reorganization of senior police officers in key positions of the PNP Command Group, Directorial Staff, Police Regional Offices and National Support Units.
 layout: post
-style: horizontal
-categories: [news_section]
+categories: [other]
 tags: [pnp, statement, reorganization]
 published: true
 permalink: /:path
@@ -65,5 +64,4 @@ The following PNP officers are designated to new positions effective 1 July 2016
 
 <br/>
 PDG Dela Rosa said, "This reorganization followed the time-honored tradition in the police service that recognizes merit, seniority and competence in the selection process."
-
-[[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/features/3432-dela-rosa-names-new-officials-to-team-pnp)]
+&#x25cf; [[Source](http://pnp.gov.ph/portal/index.php/press-news-releases/features/3432-dela-rosa-names-new-officials-to-team-pnp)]
