--- a/news/articles/_posts/2016-07-02-20160702T170719.md
+++ b/news/articles/_posts/2016-07-02-20160702T170719.md
@@ -3,7 +3,7 @@ title: Charges Filed Against Aquino, Purisima and Napeñas
 date: 2016-07-02T17:07:19PHT
 excerpt: A day after presidential immunity, families of SAF 44 filed charges against Aquino and two former PNP officials.
 layout: post
-categories: [news_section]
+categories: [other]
 tags: [saf44, mamasapano, ombudsman, vacc]
 published: true
 permalink: /:path
@@ -32,3 +32,5 @@ In response, Atty Topacio issued a response debunking De Lima's statement:
 > With all due respect to the tail-end Senator, Mr Aquino and the other respondents are not being charged with Murder or Homicide, but for RECKLESS IMPRUDENCE RESULTING TO MULTIPLE HOMICIDE. As a former Justice Secretary and supposedly and expert in criminal law, De Lima should know better: there is a world of difference homicide and murder on the one hand, which are crimes committed with deliberate intent; and crimes committed through negligence, such as reckless imprudence. In other words, Aquino et al. are NOT being charged with the crime of HOMICIDE, but for his RECKLESS IMPRUDENCE which resulted in the killing of the SAF44. RECKLESS IMPRUDENCE, as every law school freshman knows, is a CRIME BY ITSELF, committed through NEGLIGENCE, as a result of imprudence, lack of foresight or lack of skill. Having committed a crime of RECKLESS IMPRUDENCE, Aquino et al. should he held liable for all the consequences thereof even though not intended, including the deaths of 44 police officers. This is clear under Article 4 of the Revised Penal Code.
 >
 > The charge of RECKLESS IMPRUDENCE is supported by a huge amount of documentary evidence consisting of the Senate Report, the PNP Board of Inquiry Report, and the transcripts of testimonies before the Senate taken UNDER OATH, all of which are attached to our Complaint. They are more than enough to constitute probable cause after preliminary investigation. The Supreme Court defines probable cause as such evidence showing that, more likely than not, a crime has been committed and those charged are probable guilty thereof.
+
+&#x25cf;
