--- a/news/articles/_posts/2016-07-02-20160702T192959.md
+++ b/news/articles/_posts/2016-07-02-20160702T192959.md
@@ -3,7 +3,7 @@ title: Drilon Files Transportation Crisis Act of 2016
 date: 2016-07-02T19:29:59PHT
 excerpt: Transporation Crisis Act of 2016 or Senate Bill No. 11 seeks to grant emergency powers to the Duterte administration to "capacitate him in addressing the horrendous traffic situation within and outside Metro Manila."
 layout: post
-categories: [news_article]
+categories: [article]
 tags: [traffic, transportation crisis act, emergency powers]
 published: true
 permalink: /:path
@@ -30,5 +30,4 @@ The proposed bill includes other modes of procurement like procurement from a pr
 Prohibition of Temporary Restraining Orders (TROs) on transportation related projects that could inhibit right-of-way acquisition, bids and awards for transportation projects, the implementation or operation of any transportation project identified by the President, the termination of transportation projects and "the undertaking or authorization of any other lawful activity necessary for any transportation project identified by the President."
 
 The bill will also allow the President to reorganize agencies; abolish or create offices; split or merge positions; transfer functions, equipments, properties, records and personnel; institute drastic cost-cutting measures; and other related actions to solving the transportation crisis.
-
-[Sourced from Inquirer]
+&#x25cf; [Sourced from Inquirer]
