--- a/news/articles/_posts/2016-07-07-20160705T122300.md
+++ b/news/articles/_posts/2016-07-07-20160705T122300.md
@@ -3,7 +3,7 @@ title: National Disaster Consciousness Month
 date: 2016-07-05T12:23:00PHT
 excerpt: July is the National Disaster Consciousness Month by virtue of Executive Order No. 137, signed August 1999 by former President Joseph Estrada.
 layout: post
-categories: [news_section]
+categories: [other]
 tags: [disaster, ndrrmc, eo137]
 published: true
 permalink: /:path
@@ -27,3 +27,4 @@ More rules can be found along with the official registration and photo submissio
 There is over PhP240,000 worth of cash prizes including a Most Popular Photo Award to be determined via Facebook likes.   
 
 All NDRRMC member-agencies and OCD Regional Offices will be undertaking various activities in observance of the National Disaster Consciousness Month.
+&#x25cf;
