--- a/news/articles/_posts/2016-06-20-20160620T213320.md
+++ b/news/articles/_posts/2016-06-20-20160620T213320.md
@@ -3,7 +3,7 @@ title: Duterte Administration 10-point Socioeconomic Agenda
 date: 2016-06-20T21:33:20UTC
 excerpt: Economic forum in Davao tackles Duterte administration 10-point Socioeconomic Agenda.
 layout: post
-categories: [news_business]
+categories: [business]
 tags: [economy, social, socioeconomic]
 published: true
 permalink: /:path
@@ -26,25 +26,5 @@ The following is the updated 10-point socioeconomic agenda:
 9. Improve social protection programs, including the government’s Conditional Cash Transfer program, to protect the poor against instability and economic shocks.
 10. Strengthen implementation of the Responsible Parenthood and Reproductive Health Law to enable especially poor couples to make informed choices on financial and family planning.
 
-{% comment %}
-
-May 12 - 8-point economic agenda - a little bit more words
-http://cnnphilippines.com/news/2016/05/12/rodrigo-duterte-eight-point-economic-agenda.html
-
-May 16 - some expounding
-http://www.rappler.com/nation/politics/elections/2016/132850-duterte-8-point-economic-agenda
-
-May 19 - Expounding
-http://cnnphilippines.com/business/2016/05/19/Duterte-adviser-economic-agenda.html
-
-May 22 - More details
-http://www.mb.com.ph/dutertes-8-point-economic-plan/
-
-June 20 - 10-point socio-economic agenda
-MANILA, Philippines — The incoming Duterte administration recently released its 10-point socioeconomic agenda, presenting it to the business community at a two-day conference in Davao City on Monday.
-The agenda was expanded and revised from an earlier announced eight-point economic plan.
-http://www.philstar.com/business/2016/06/20/1594827/duterte-magic-10-point-socioeconomic-agenda
-
-Analysis
-http://www.bworldonline.com/content.php?section=TopStory&title=&145more-audacious&8217-policy-making-planned&id=129289
-{% endcomment %}
+Benjamin E. Diokno, designated Budget Secretary of the incoming Duterte administration, told reporters. "We are planning to spend as much as 5% to 6% for infrastructure; we’re thinking about P800 billion to P1 trillion for infrastructure." In addition, he said that the incoming administration will focus investments on agriculture and human capital development and bring economic growth to the countryside.
+&#x25cf; [Sources: [Business World Online](http://www.bworldonline.com/content.php?section=TopStory&title=&145more-audacious&8217-policy-making-planned&id=129289)]
