--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -3,7 +3,7 @@ title: 16th President Inaugural Address Transcript
 date: 2016-06-30T05:39:03UTC
 excerpt: Transcript of the Inaugural Address of the 16th President of the Republic of the Philippines, Rodrigo Roa Duterte.
 layout: post
-categories: [news_article]
+categories: [article]
 tags: [inauguration, speech, address, president, duterte]
 published: true
 permalink: /:path
@@ -115,3 +115,4 @@ Why?
 Because I am ready to start my work for the nation.
 
 Thank you and good afternoon.
+&#x25cf;
