--- a/news/articles/_posts/2016-07-01-20160701T042747.md
+++ b/news/articles/_posts/2016-07-01-20160701T042747.md
@@ -3,7 +3,7 @@ title: New Armed Forces of the Philippines Chief of Staff
 date: 2016-07-01T04:27:47UTC
 excerpt: President Rodrigo Roa Duterte led the Armed Forces of the Philippines Change of Command in Camp Aguinaldo in honor of outgoing Acting Chief of Staff Lt. Gen. Glorioso V. Miranda and the incoming Chief of Staff Lt. Gen. Ricardo R. Visaya.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: [afp, chief of staff, change of command]
 published: true
 permalink: /:path
@@ -31,3 +31,4 @@ The ceremony was attended, among others, by former President Fidel V. Ramos and 
 The President, in his speech, emphasized his role to unify the country, iterating his continued intention of talking with the Communist Party of the Philippines (CPP) leader Jose Maria Sison, Nur Misuari of the Moro National Liberation Front (MNLF) and chair of the Moro Islamic Liberation Front (MILF), Al Haj Murad Ebrahim. He said, "It is not a war to be fought forever. We cannot fight forever. We might have the weapons, the armaments and the bullets and the mortars. But that does not make a nation. My job is to bring peace. But hand in hand I must also bring order in my country."
 
 With regards to the Abu Sayyaf Group, he said, "I am not warning the Abu Sayyaf. But I said, there will be a time for reckoning. ... We cannot be the whipping boy of a few who wants nothing but, maybe, money and power on their hands."
+&#x25cf;
