--- a/news/articles/_posts/2016-07-05-20160705T222147.md
+++ b/news/articles/_posts/2016-07-05-20160705T222147.md
@@ -3,7 +3,7 @@ title: 5 Police Generals Allegedly Involved in Illegal Drugs
 date: 2016-07-05T22:21:47PHT
 excerpt: President Duterte named five PNP Generals allegedly involved in illegal drugs during the 69th Anniversary of the Philippine Air Force celebration in Clark, Pampanga.
 layout: post
-categories: [news_top, news_article]
+categories: [topnews]
 tags: 
 published: true
 permalink: /:path
@@ -32,4 +32,4 @@ The National Police Commission (NAPOLCOM) had formed a committee that will overs
 The group is composed of lawyers who will be involved in evidence gathering, evaluation and validation of facts.
 The committee is tasked to gather and confirm evidence in seven days and will be submitted to an adhoc committee for recommendation.
 Among the evidence seen by NAPOLCOM commissioners were in the form of intelligence reports.
-
+&#x25cf;
