--- a/info/_posts/2016-06-12-pcci.md
+++ b/info/_posts/2016-06-12-pcci.md
@@ -1,12 +1,13 @@
 ---
 title: Philippine Chamber of Commerce and Industry (PCCI)
 date: 2016-06-20T21:33:20UTC
-excerpt: What is the Philippine Chamber of Commerce and Industry?
+excerpt: On Dec. 7, 1978, during the 4th Philippine Business Conference, the Palace issued Letter of Instruction No. 780 designating the PCCI as "single voice of Philippine business."
 layout: post
 categories: [org]
 tags: []
 published: true
-permalink: 
+permalink: /info/org/20160620T213320
+link: 20160620T213320
 ---
 
 * [PCCI President George T. Barcelon presents Top 10 actionable recommendations to President-Elect Duterte](http://www.philippinechamber.com/index.php?option=com_content&view=article&id=869:pcci-president-george-t-barcelon-presents-top-10-actionable-recommendations-to-president-elect-duterte&catid=53&Itemid=246)
