Fix links of info posts

--- a/info/_posts/2016-06-12-pcci.md
+++ b/info/_posts/2016-06-12-pcci.md
@@ -7,7 +7,7 @@ categories: [org]
 tags: []
 published: true
 permalink: /info/org/20160620T213320
-link: 20160620T213320
+link: /info/org/20160620T213320
 ---
 
 * [PCCI President George T. Barcelon presents Top 10 actionable recommendations to President-Elect Duterte](http://www.philippinechamber.com/index.php?option=com_content&view=article&id=869:pcci-president-george-t-barcelon-presents-top-10-actionable-recommendations-to-president-elect-duterte&catid=53&Itemid=246)
