--- a/info/_posts/2016-07-09-gpcci.md
+++ b/info/_posts/2016-07-09-gpcci.md
@@ -9,7 +9,7 @@ categories: [company]
 tags: 
 published: true
 permalink: /info/company/20160709T175617
-link: 20160709T175617
+link: /info/company/20160709T175617
 image:
   layout: auto_width
   source: 
