--- a/info/_posts/2016-06-12-pcci.md
+++ b/info/_posts/2016-06-12-pcci.md
@@ -4,7 +4,7 @@ date: 2016-06-20T21:33:20UTC
 excerpt: On Dec. 7, 1978, during the 4th Philippine Business Conference, the Palace issued Letter of Instruction No. 780 designating the PCCI as "single voice of Philippine business."
 layout: post
 categories: [org]
-tags: []
+tags: [pcci, business, commerce, industry]
 published: true
 permalink: /info/org/20160620T213320
 link: /info/org/20160620T213320
