Delete acronym from title of info post

--- a/info/_posts/2016-06-12-pcci.md
+++ b/info/_posts/2016-06-12-pcci.md
@@ -1,5 +1,5 @@
 ---
-title: Philippine Chamber of Commerce and Industry (PCCI)
+title: Philippine Chamber of Commerce and Industry
 date: 2016-06-20T21:33:20UTC
 excerpt: On Dec. 7, 1978, during the 4th Philippine Business Conference, the Palace issued Letter of Instruction No. 780 designating the PCCI as "single voice of Philippine business."
 layout: post
