Add tags to news post

--- a/news/articles/_posts/2016-07-05-20160705T222147.md
+++ b/news/articles/_posts/2016-07-05-20160705T222147.md
@@ -4,7 +4,7 @@ date: 2016-07-05T22:21:47PHT
 excerpt: President Duterte named five PNP Generals allegedly involved in illegal drugs during the 69th Anniversary of the Philippine Air Force celebration in Clark, Pampanga.
 layout: post
 categories: [topnews]
-tags: [pnp]
+tags: [pnp, drugs, napolcom]
 published: true
 permalink: /:path
 image:
