--- a/news/articles/_posts/2016-07-05-20160705T222147.md
+++ b/news/articles/_posts/2016-07-05-20160705T222147.md
@@ -17,7 +17,7 @@ video:
   attribution: 
 ---
 
-President Rodrigo Duterte named five Philippine National Police (PNP) Generals allegedly involved in illegal drugs during the 69th Anniversary of the Philippine Air Force (PAF) celebration in Clark, Pampanga.
+President Rodrigo Duterte named five Philippine National Police (PNP) Generals allegedly involved in illegal drugs during his speech on the 69th Anniversary of the Philippine Air Force (PAF) celebration held in Clark, Pampanga on 5 July 2016.
 The President said that they are protectors of the drug syndicate in the country.
 
 Those named are Director General Marcelo Garbo, Jr.; Police Director Bernardo Diaz; Quezon City Police Director Edgardo Tinio; former National Capital Region Police Office (NCRPO) Chief Joel Pagdilao; and retired General Vicente Loot, who is now mayor of Daanbantayan town in Cebu.
