Update news post excerpts

--- a/news/articles/_posts/2016-06-20-20160620T213320.md
+++ b/news/articles/_posts/2016-06-20-20160620T213320.md
@@ -1,7 +1,7 @@
 ---
 title: Duterte Administration 10-point Socioeconomic Agenda
 date: 2016-06-20T21:33:20UTC
-excerpt: Economic forum in Davao tackles Duterte administration 10-point Socioeconomic Agenda.
+excerpt: The two-day economic forum in Davao starting 20 June tackled the 10-point Socioeconomic Agenda of the incoming Duterte administration.
 layout: post
 categories: [business]
 tags: [economy, social, socioeconomic]
