--- a/news/articles/_posts/2016-07-09-20160709T222759.md
+++ b/news/articles/_posts/2016-07-09-20160709T222759.md
@@ -1,7 +1,7 @@
 ---
 title: Case Filed Against Aquino and Abad over DAP
 date: 2016-07-09T22:27:59PHT
-excerpt: 
+excerpt: Cause-oriented groups filed today a malversation case against the former President, Benigno Simeon Aquino III and former Department of Budget and Management (DBM) Secretary Florencio "Butch" Abad over the approval and implementation of the Disbursement Acceleration Program (DAP).
 layout: post
 categories: [article]
 tags: [aquino, abad, malversation, dap, ombudsman]
