Add file download link to news post

--- a/news/articles/_posts/2016-07-09-20160709T222759.md
+++ b/news/articles/_posts/2016-07-09-20160709T222759.md
@@ -39,3 +39,5 @@ BAYAN secretary general Renato Reyes said the allegations were originally from t
 
 The complaintants are Bayan Muna Partylist Rep. Carlos Isagani Zarate, Bagong Alyansang Makabayan (BAYAN) Secretary General Renato M. Reyes, Jr., Alliance of Concerned Teachers (ACT) National Chairperson Benjamin Valbuena, Confederation For Unity, Recognition and Advancement of Government Employees (COURAGE) President Ferdinand Gaite, Volunteers Against Crime and Corruption (VACC) Founding Chairman/President Dante LA. Jimenez, Mae P. Paner of the Juana Change Movement, Kilusang Magbubukid ng Philipinas (KMP) Secretary General Antonio Flores, GABRIELA Secretary General Joan Mae Salvador, Kalipunan ng Damayang Mahihirap (KADAMAY) National Chairperson Gloria G. Arellano and Philippine Heart Center Employees Association-Alliance of Health Workers President Bonifacio S. Carmona, Jr.
 &#x25cf; [[Bayan](http://www.bayan.ph/2016/07/08/groups-file-malversation-raps-vs-ex-pres-aquino-abad/)]
+
+Bayan website [download link (PDF, 248kB)](http://www.bayan.ph/wp-content/uploads/2016/07/DAP-Complaint-Affidavit.pdf) of a copy of the complaint affidavit filed at the Offce of the Ombudsman.
