Use image source url in configuration

--- a/announce/events/_posts/2016-07-02-20160702T191414.md
+++ b/announce/events/_posts/2016-07-02-20160702T191414.md
@@ -8,7 +8,7 @@ eventdateend: 2022-07-03
 categories: [announcement]
 published: true
 image: 
-  source: https://dl.dropboxusercontent.com/u/47611946/duterte/site/national_museum_philippines_218x145.jpg
+  source: /site/national_museum_philippines_218x145.jpg
   attribution: Elmer B. Domingo CC BY-SA 3.0
 link: 
 ---
