--- a/news/articles/_posts/2016-06-30-20160630T002859.md
+++ b/news/articles/_posts/2016-06-30-20160630T002859.md
@@ -9,7 +9,7 @@ published: true
 permalink: /:path
 image:
   layout:
-  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inauguration_20160630.png
+  source: /post/duterte_inauguration_20160630.png
   attribution: RTVM
 video:
   layout: bottom
