--- a/news/articles/_posts/2016-07-01-20160701T023310.md
+++ b/news/articles/_posts/2016-07-01-20160701T023310.md
@@ -9,7 +9,7 @@ published: true
 permalink: /:path
 image:
   layout: auto_width
-  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
+  source: /post/pnp_chief_pdg_ronald_m_dela_rosa_300x.png
   attribution: RTVM
 video:
   layout: bottom
