--- a/news/articles/_posts/2016-06-30-20160630T053903.md
+++ b/news/articles/_posts/2016-06-30-20160630T053903.md
@@ -9,7 +9,7 @@ published: true
 permalink: /:path
 image:
   layout:
-  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/duterte_inaugural_address.png
+  source: /post/duterte_inaugural_address.png
   attribution: RTVM
 ---
 
