--- a/news/articles/_posts/2016-07-01-20160701T042747.md
+++ b/news/articles/_posts/2016-07-01-20160701T042747.md
@@ -9,7 +9,7 @@ published: true
 permalink: /:path
 image:
   layout: auto_width
-  source: https://dl.dropboxusercontent.com/u/47611946/duterte/post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
+  source: /post/afp_chief_of_staff_ltgen_ricardo_r_visaya_300x.png
   attribution: RTVM
 video:
   layout: bottom
