Edit news post excerpt

--- a/news/articles/_posts/2016-07-02-20160702T050516.md
+++ b/news/articles/_posts/2016-07-02-20160702T050516.md
@@ -1,7 +1,7 @@
 ---
 title: Press Statement of new PNP Chief
 date: 2016-07-02T05:05:16UTC
-excerpt: First press statement of the new PNP Chief, PDG Ronald Dela Rosa, after his assumption of command on 1 July 2016.
+excerpt: First press statement of the new Philippine National Police Chief, Police Director General Ronald Dela Rosa, after his assumption of command on 1 July 2016.
 layout: post
 categories: [other]
 tags: [pnp, statement]
