Edit announcement title

--- a/announce/events/_posts/2016-07-07-20160707T214937.md
+++ b/announce/events/_posts/2016-07-07-20160707T214937.md
@@ -1,5 +1,5 @@
 ---
-title: National Science and Technology Week 2016 
+title: National Science and Technology Week
 date: 2016-07-07T21:49:37PHT
 datestart:      2016-07-07
 dateend:        2016-07-29
