Add tags to news posts

--- a/news/articles/_posts/2016-06-20-20160620T213320.md
+++ b/news/articles/_posts/2016-06-20-20160620T213320.md
@@ -4,7 +4,7 @@ date: 2016-06-20T21:33:20UTC
 excerpt: The two-day economic forum in Davao starting 20 June tackled the 10-point Socioeconomic Agenda of the incoming Duterte administration.
 layout: post
 categories: [business]
-tags: [economy, social, socioeconomic]
+tags: [commerce, industry, economy, social, socioeconomic]
 published: true
 permalink: /:path
 ---
