--- a/news/articles/_posts/2016-07-06-20160706T185559.md
+++ b/news/articles/_posts/2016-07-06-20160706T185559.md
@@ -17,16 +17,18 @@ video:
   attribution: 
 ---
 
-Kilusang Magbubukid ng Pilipinas (KMP), of which Mariano is a founding member and former chair, used to stage protests outside the gates of the Department of Agrarian Reform building on Elliptical Road in Quezon City.
+The Kilusang Magbubukid ng Pilipinas (KMP), of which Rafael "Ka Paeng" Mariano is a founding member and former chair, used to stage protests outside the gates of the Department of Agrarian Reform (DAR) building on Elliptical Road in Quezon City.
 Mariano said, "Farmers led by the KMP stayed here for more than a week before the Jan. 22, 1987, Mendiola Massacre.”
-The gates were shut, chained and welded to keep out protesters and "protect" the employees inside.
-After 18 years, the driveway gates were broke open by the department's new Secretary, Rafael Mariano.
 
-Aside from KMP, Secretary Mariano was also president of Anakpawis party-list and chair of Bagong Alyansang Makabayan.
-He was one of the National Democratic Front (NDF) nominees for Cabinet position submitted to then president-elect Rodrigo Duterte.
+The DAR building gates were shut in 1992 during the administration of former President Joseph Estrada to keep out protesters.
+In 2002, former DAR Secretary Hernani Braganza ordered to padlock the gates after protesters stormed and locked his office doors and set up a vigil in front of his office.
+The gates were reinforced under the administration of former Secretary Virgilio de los Reyes.
+During the administration of former President Benigno S. Aquino III when metal grills were welded onto the glass doors and windows of the DAR office.
+"The management said it was for our safety, for the safety of the building and property... so it would be better if they controlled the entry of people," DAR Employees Association secretary, Gloria Almazan said.
 
-Now that the gates are opened, he said, "This symbolizes that DAR, on all levels, will maintain open. We will follow a policy of continuing open and productive dialogues between the officials and employees of DAR and other stakeholders of agrarian reform, especially our farmers and agricultural workers, and advocates."
-Watchers can only surmise how deep those actions and words run with those who have waited and fought for the land.
+The new Department of Agrarian Reform Secretary, Rafael Mariano, hammered the main gates leading to the DAR building after 18 years of keeping out protesters and farmers.
+He then said after, "This symbolizes that DAR, on all levels, will maintain open. We will follow a policy of continuing open and productive dialogues between the officials and employees of DAR and other stakeholders of agrarian reform, especially our farmers and agricultural workers, and advocates."
+Others can only wonder how deep those actions and words run with those who have waited and fought for rights and lands.
 "This serves to remove all fences, walls between the officials and employees of DAR, and our stakeholders," Mariano said.
 
 All farmers and even protesters are welcome to the DAR.
