Edit news post title

--- a/news/articles/_posts/2016-07-12-20160712T100335.md
+++ b/news/articles/_posts/2016-07-12-20160712T100335.md
@@ -1,5 +1,5 @@
 ---
-title: The Hague Favors Philippines Over South China Sea
+title: Tribunal Favors Philippines Over South China Sea Dispute
 date: 2016-07-12T10:03:35UTC
 excerpt: After three years since the Philippines filed a case in 2013, an international tribunal at The Hague released their decision on 12 July 2016 in favor of the Philippines and that China's claims to the South China Sea are invalid; and its land reclamations and other actions in the area are illegal.
 layout: post
