--- a/news/articles/_posts/2016-07-02-20160702T192959.md
+++ b/news/articles/_posts/2016-07-02-20160702T192959.md
@@ -4,7 +4,7 @@ date: 2016-07-02T19:29:59PHT
 excerpt: Transporation Crisis Act of 2016 or Senate Bill No. 11 seeks to grant emergency powers to the Duterte administration to "capacitate him in addressing the horrendous traffic situation within and outside Metro Manila."
 layout: post
 categories: [article]
-tags: [traffic, transportation crisis act, emergency powers]
+tags: [bill, transportation crisis act, emergency powers, traffic, transportation]
 published: true
 permalink: /:path
 image:
