--- a/news/articles/_posts/2016-06-28-20160628T172635.md
+++ b/news/articles/_posts/2016-06-28-20160628T172635.md
@@ -1,7 +1,7 @@
 ---
-title: 25th Mindanao Business Conference (MinBizCon)
+title: 25th Mindanao Business Conference
 date: 2016-06-28T17:26:35UTC
-excerpt: The 25th Mindanao Business Conference (MinBizCon) will be held in the mining capital of the Philippines, Surigao del Norte in Caraga region, on 24-26 August 2016 at the Philippine Gateway Hotel in Surigao City.
+excerpt: The 25th Mindanao Business Conference will be held in the mining capital of the Philippines, Surigao del Norte in Caraga region, on 24-26 August 2016 at the Philippine Gateway Hotel in Surigao City.
 layout: post
 categories: [business]
 tags: [commerce, industry, scci]
