--- a/news/articles/_posts/2016-07-09-20160709T143348.md
+++ b/news/articles/_posts/2016-07-09-20160709T143348.md
@@ -3,7 +3,7 @@ title: DENR Suspends 2 Mining Firms in Zambales
 date: 2016-07-09T14:33:48UTC
 excerpt: The Department of Environment and Natural Resources has suspended two nickel mining firms in Zambales on 7 July due to alleged environmental crimes, violation of mining and environmental laws.
 layout: post
-categories: [business]
+categories: [business, mining]
 tags: [industry, mining, nickel, denr, suspension]
 published: true
 permalink: /:path
