Rename news articles but maintain original links to articles
News articles with titles make it easier to find the concerned
article during maintenance.

--- a/news/articles/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
+++ b/news/articles/_posts/2016-06-12-20160612T152603-Vin d'Honneur.md
@@ -1,12 +1,12 @@
 ---
-title: "Vin d’Honneur"
+title: "Vin d'Honneur"
 date: 2016-06-12T015:26:03UTC
 excerpt: What does it mean?
 layout: post
 categories: [article]
 tags: [independence day, vin d honneur]
 published: true
-permalink: /:path
+permalink: /news/article/2016-06-12-20160612T152603
 ---
 
 The British New Year's Day Levee was adopted by the Americans and later by the Philippines.
