--- a/news/articles/_posts/2016-07-12-20160712T152312-Charting Progress to 2020.md
+++ b/news/articles/_posts/2016-07-12-20160712T152312-Charting Progress to 2020.md
@@ -6,7 +6,7 @@ layout: post
 categories: [business]
 tags: [economic forum, mvp, pangilinan]
 published: true
-permalink: /:path
+permalink: /news/business/2016-07-12-20160712T152312
 image:
   layout: auto_width
   source: 
