--- a/announce/events/_posts/2016-06-28-20160628T151134.md
+++ b/announce/events/_posts/2016-06-28-20160628T151134.md
@@ -14,5 +14,5 @@ link: /news/business/2016-06-28-20160628T172635
 ---
 
 The 25th Mindanao Business Conference (MinBizCon) will be held on 24-26 August 2016 at the Philippine Gateway Hotel in Surigao City.
-The three-day conference is expected to expand business opportunities in the region with the year's theme "Mindanao: ASEAN's Emerging Economic Hub".
+The 3-day conference expects to expand business opportunities with the year's theme "Mindanao: ASEAN's Emerging Economic Hub".
  
