Correction on church name in news post

--- a/news/articles/_posts/2016-07-30-20160730T192221-August is History Month.md
+++ b/news/articles/_posts/2016-07-30-20160730T192221-August is History Month.md
@@ -26,7 +26,7 @@ The celebration of History Month will kick off on August 1 with the commemoratio
 |--------|-------|
 | Date   | Event |
 |:------:|-------|
-| 2 Aug  | "Workshop on Stone Conservation", Baraoisan Church Historical Landmark in Malolos, Bulacan
+| 2 Aug  | "Workshop on Stone Conservation", Barasoain Church Historical Landmark in Malolos, Bulacan
 | 5 Aug  | "Kathang Anino Shadow Puppetry Performance", Jose Rizal Museum, Laguna
 |        | Launching of the "1st Project Saysay Hub", San Francisco High School, Quezon City
 | 9 Aug  | Commemoration for the "Battle of Mayayao", Mayuyao, Ifugao
